--- a/Souq/Souq.csproj
+++ b/Souq/Souq.csproj
@@ -18,5 +18,9 @@
     <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\" />
+  </ItemGroup>
+
 
 </Project>
