--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~10.0.14",
     "@angular/router": "~10.0.14",
     "bootstrap": "^4.5.2",
+    "bootswatch": "^4.5.2",
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^6.1.0",
     "ngx-toastr": "^13.0.0",
